UI changes for cross device-confirmInvite page

--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -53,7 +53,7 @@
 
             <div role="main" class="ui-content jqm-content jqm-fullwidth"> <!-- Important-->
 
-                <div id="userTop" class="ui-grid-b Names" style="background-color:#ffbb00; height:20px; width:100%; text-transform: uppercase; font-size: 13px; padding-top:10px;">
+                <div id="userTop" class="ui-grid-b Names" style="background-color:#ffbb00; width:100%; text-transform: uppercase; padding-top:10px;">
 
                 </div><!-- /grid-b -->
 
@@ -63,7 +63,7 @@
 
 
                 <form>
-                    <fieldset id="tags" data-role="controlgroup" data-type="horizontal" data-mini="true" style="background-color:#333333; text-shadow: none;" id="tags"> 
+                    <fieldset id="tags" data-role="controlgroup" data-type="horizontal" data-mini="true" style="background-color:#333333; text-shadow: none;"> 
 
 
 
@@ -73,13 +73,13 @@
 
 
                 <div class="ui-grid-b" style=" padding:0px; background-color: #88ccc1;">
-                    <div class="ui-block-a"><br><div class="ui-bar ui-bar-a" style="height:60px; color:#ffffff; background-color:#88ccc1; border: none; text-shadow: none;">TIME/DATE</div></div>
-                    <div class="ui-block-b"><div class="ui-bar ui-bar-a" style="height:60px; margin:0px; padding:0px; background-color:#ffbb00; border: none; text-shadow: none;">
+                    <div class="ui-block-a timedate"><br><div class="ui-bar ui-bar-a" style="height:60px; color:#ffffff; background-color:#88ccc1; border: none; text-shadow: none;">TIME/DATE</div></div>
+                    <div class="ui-block-b confirmdate"><div class="ui-bar ui-bar-a" style="height:60px; margin:0px; padding:0px; background-color:#ffbb00; border: none; text-shadow: none;">
                                                  <form>
                                 <fieldset data-role="controlgroup" data-type="horizontal" data-mini="true" style="padding-top:7px;">
                                     
                                     <label for="select-native-11"></label>
-                                    <div style="position:relative; width:90px;">
+                                    <div style="position:relative;">
                                     <input id="basicExample" type="text" class="time ui-timepicker-input" autocomplete="off">
                                     <img src="images/mydownarrow.png" style="position:absolute; right:5px; top:8px;" >
                                 </fieldset>
@@ -93,7 +93,7 @@
                 <input id="address" name="location" id="location" placeholder="Location" value="" type="text">
 
                 <div style="text-align:center; padding-top:5%">
-                    <p style="float: left; margin-left:10px;" class="activitypicc"><img id="actpic" src="images/coffeeinvert.svg" class="actpic" style="border: dotted 1px#b42723;"></p>
+                    <p style="float: left; margin-left:5%;" class="activitypicc"><img id="actpic" src="images/coffeeinvert.svg" class="actpic" style="border: dotted 1px #cc0000;"></p>
 
                     <a href="#" class="confirminvitesButton" style="color:#ffffff; background-color: #cc0000;">SEND OUT INVITES</a>
                 </div>
