--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
         <script src="js/libs/modernizr-2.5.3.min.js"></script>
          <script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
  
-    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js'></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js'></script> 
       <script src="js/cloudinary/jquery.ui.widget.js" type="text/javascript"></script>
       <script src="js/cloudinary/jquery.iframe-transport.js" type="text/javascript"></script>
       <script src="js/cloudinary/jquery.fileupload.js" type="text/javascript"></script>
@@ -117,7 +117,7 @@
                   
 
                     <div id="submitRegistrationButton" style="text-align:center">
-                        <button id="submitRegistrationButton" class="findpplBtn" style="color:#ffffff; height: 50px; margin-top:10px; background-color: #cc0000" >CONTINUE</button>
+                        <button id="submitRegistrationButton" style="color:#ffffff; height: 50px; margin-top:10px; background-color: #cc0000" >CONTINUE</button>
                     </div>
 </form>                
 
