--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -95,7 +95,7 @@
                 <div style="text-align:center; padding-top:5%">
                     <p style="float: left; margin-left:5%;" class="activitypicc"><img id="actpic" src="images/coffeeinvert.svg" class="actpic" style="border: dotted 1px #cc0000;"></p>
 
-                    <a href="#" class="confirminvitesButton" style="color:#ffffff; background-color: #cc0000;">SEND OUT INVITES</a>
+                    <a href="#" class="confirminvitesButton" onclick="confirmInvite()" style="color:#ffffff; background-color: #cc0000;">SEND OUT INVITES</a>
                 </div>
 
 
