--- a/pendingInvitations.html
+++ b/pendingInvitations.html
@@ -48,9 +48,9 @@
                     <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a namebar" style="background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
                     <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a infobar" style="background-color:#88ccc1; color:#ffffff; text-shadow:none;">
 
-                      <div align="center" class="float-left">COFFEE/TEA</div>
-                      <div align="center" class="float-left">CONTENT OF COLUMN </div>
-                      <div align="center" class="float-left">CONTENT OF COLUMN </div>
+                      <div align="center" class="float-left">Coffee/Tea</div>
+                      <div align="center" class="float-left">IN 20 MINUTES</div>
+                      <div align="center" class="float-left"> < 5 MILES </div>
 
                     </div>
                 </div>
@@ -65,9 +65,9 @@
                     <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a namebar" style="background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
                     <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a infobar" style="background-color:#88ccc1; color:#ffffff; text-shadow:none;">
 
-                      <div align="center" class="float-left">COFFEE/TEA</div>
-                      <div align="center" class="float-left">CONTENT OF COLUMN </div>
-                      <div align="center" class="float-left">CONTENT OF COLUMN </div>
+                      <div align="center" class="float-left">Coffee/Tea</div>
+                      <div align="center" class="float-left">IN 20 MINUTES</div>
+                      <div align="center" class="float-left"> < 5 MILES </div>
 
                     </div>
                 </div>
@@ -82,9 +82,9 @@
                     <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a namebar" style="background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
                     <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a infobar" style="background-color:#88ccc1; color:#ffffff; text-shadow:none;">
 
-                      <div align="center" class="float-left">COFFEE/TEA</div>
-                      <div align="center" class="float-left">CONTENT OF COLUMN </div>
-                      <div align="center" class="float-left">CONTENT OF COLUMN </div>
+                      <div align="center" class="float-left">Coffee/Tea</div>
+                      <div align="center" class="float-left">IN 20 MINUTES</div>
+                      <div align="center" class="float-left"> < 5 MILES </div>
 
                     </div>
                 </div>
