--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -80,7 +80,7 @@
                                     
                                     <label for="select-native-11"></label>
                                     <div style="position:relative;">
-                                    <input id="basicExample" type="text" class="time ui-timepicker-input" autocomplete="off">
+                                    <input id="basicExample" type="text" class="time ui-timepicker-input" autocomplete="off" style="background-color:#88ccc1; color:#ffffff;">
                                     <img src="images/mydownarrow.png" style="position:absolute; right:5px; top:8px;" >
                                 </fieldset>
                             </form>
