UI fixes for confirmInvitations page - done

--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -73,19 +73,19 @@
 
 
                 <div class="ui-grid-b" style=" padding:0px; background-color: #88ccc1;">
-                    <div class="ui-block-a timedate"><br><div class="ui-bar ui-bar-a" style="height:60px; color:#ffffff; background-color:#88ccc1; border: none; text-shadow: none;">TIME/DATE</div></div>
+                    <div class="ui-block-a timedate"><br><div class="ui-bar ui-bar-a" style="height:60px; color:#cc0000; font-family: PT Sans Narrow; background-color:#88ccc1; border: none; text-shadow: none;">TIME/DATE</div></div>
                     <div class="ui-block-b confirmdate"><div class="ui-bar ui-bar-a" style="height:60px; margin:0px; padding:0px; background-color:#ffbb00; border: none; text-shadow: none;">
                                                  <form>
                                 <fieldset data-role="controlgroup" data-type="horizontal" data-mini="true" style="padding-top:7px;">
                                     
                                     <label for="select-native-11"></label>
                                     <div style="position:relative;">
-                                    <input id="basicExample" type="text" class="time ui-timepicker-input" autocomplete="off" style="background-color:#88ccc1; color:#ffffff;">
+                                    <input id="basicExample" type="text" class="time ui-timepicker-input" autocomplete="off" style="background-color:#88ccc1; color:#cc0000;">
                                     <img src="images/mydownarrow.png" style="position:absolute; right:5px; top:8px;" >
                                 </fieldset>
                             </form>
                         </div></div>
-                    <div class="ui-block-c"><br><div id="dateString" class="ui-bar ui-bar-a" style="height:60px; color:#ffffff; background-color:#88ccc1; border: none; text-shadow: none;">10.09.2014</div></div>
+                    <div class="ui-block-c"><br><div id="dateString" class="ui-bar ui-bar-a" style="height:60px; color:#cc0000; background-color:#88ccc1; border: none; text-shadow: none;">10.09.2014</div></div>
                 </div><!-- /grid-b -->
 
 
