--- a/upcomingInvitations.html
+++ b/upcomingInvitations.html
@@ -53,7 +53,7 @@
 
             <div role="main" class="ui-content jqm-content jqm-fullwidth"> <!-- Important-->
 
-                <div id="userTop" class="ui-grid-b Names" style="background-color:#ffbb00; width:100%; text-transform: uppercase; font-size: 13px; padding-top:10px;">
+                <div id="userTop" class="ui-grid-b Names" style="background-color:#ffbb00; width:100%; text-transform: uppercase; padding-top:10px;">
 
                 </div><!-- /grid-b -->
 
