--- a/view.html
+++ b/view.html
@@ -33,7 +33,7 @@
         </script>    
 
         <link rel="stylesheet" type="text/css" href="css/view.css">
-        <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/view.css">
+        <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/viewipad.css">
         <link href="//fonts.googleapis.com/css?family=PT+Sans Narrow:400,700" rel="stylesheet" type="text/css">
     </head>
 
@@ -53,7 +53,7 @@
 
             <div role="main" class="ui-content jqm-content jqm-fullwidth"> <!-- Important-->
 
-                <div id="userTop" class="ui-grid-b Names" style="background-color:#ffbb00; height:20px; width:100%; text-transform: uppercase; font-size: 13px; padding-top:10px;">
+               <div id="userTop" class="ui-grid-b Names" style="background-color:#ffbb00; width:100%; text-transform: uppercase; padding-top:10px;">
 
                 </div><!-- /grid-b -->
 
@@ -73,19 +73,19 @@
 
 
                 <div class="ui-grid-b" style=" padding:0px; background-color: #88ccc1;">
-                    <div class="ui-block-a"><br><div class="ui-bar ui-bar-a" style="height:60px; color:#ffffff; background-color:#88ccc1; border: none; text-shadow: none;">TIME/DATE</div></div>
-                    <div class="ui-block-b"><div class="ui-bar ui-bar-a" style="height:60px; margin:0px; padding:0px; background-color:#ffbb00; border: none; text-shadow: none;">
+                    <div class="ui-block-a timedate"><br><div class="ui-bar ui-bar-a" style="height:60px; color:#cc0000; font-family: PT Sans Narrow; background-color:#88ccc1; border: none; text-shadow: none;">TIME/DATE</div></div>
+                    <div class="ui-block-b confirmdate"><div class="ui-bar ui-bar-a" style="height:60px; margin:0px; padding:0px; background-color:#ffbb00; border: none; text-shadow: none;">
                                                  <form>
                                 <fieldset data-role="controlgroup" data-type="horizontal" data-mini="true" style="padding-top:7px;">
                                     
                                     <label for="select-native-11"></label>
-                                    <div style="position:relative; width:90px;">
-                                    <input id="basicExample" type="text" class="time ui-timepicker-input" autocomplete="off">
+                                    <div style="position:relative;">
+                                    <input id="basicExample" type="text" class="time ui-timepicker-input" autocomplete="off" style="background-color:#88ccc1; color:#cc0000;">
                                     <img src="images/mydownarrow.png" style="position:absolute; right:5px; top:8px;" >
                                 </fieldset>
                             </form>
                         </div></div>
-                    <div class="ui-block-c"><br><div id="dateString" class="ui-bar ui-bar-a" style="height:60px; color:#ffffff; background-color:#88ccc1; border: none; text-shadow: none;">10.09.2014</div></div>
+                    <div class="ui-block-c"><br><div id="dateString" class="ui-bar ui-bar-a" style="height:60px; color:#cc0000; background-color:#88ccc1; border: none; text-shadow: none;">10.09.2014</div></div>
                 </div><!-- /grid-b -->
 
 
@@ -94,14 +94,6 @@
 
                 <div style="text-align:center; padding-top:5%">
                     <p style="float: left; margin-left:10px;" class="activitypicc"><img id="actpic" src="images/coffeeinvertbig.png" class="actpic" style="border: dotted 1px#b42723;"></p>
-
-                    
-                </div>
-
-
-
-
-
 
             </div><!-- /content -->
 
