--- a/pendingInvitations.html
+++ b/pendingInvitations.html
@@ -19,7 +19,7 @@
         <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
 
         <link rel="stylesheet" type="text/css" href="css/pendingInvitations.css">
-         <link href="//fonts.googleapis.com/css?family=PT+Sans Narrow:400,700" rel="stylesheet" type="text/css">
+        <link href="//fonts.googleapis.com/css?family=PT+Sans Narrow:400,700" rel="stylesheet" type="text/css">
         <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/pendingInvitationsipad.css">
     </head>
 
@@ -28,7 +28,7 @@
         <div data-role="page" data-theme="a">
 
             <div data-role="header" id="header" data-position:"fixed"> 
-                <h3>RESPOND TO INVITATIONS</h3>
+                 <h3>RESPOND TO INVITATIONS</h3>
 
                 <!-- This is the  to initiate side panels-->
                 <a href="#nav-panel" data-icon="mygear" id="closeleftPanel" class="ios app-theme-none notext" data-iconpos="notext" style="background:#cc0000; margin-left:5px; margin-top:5px;">Menu</a>
@@ -48,14 +48,14 @@
                     <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a namebar" style="background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
                     <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a infobar" style="background-color:#88ccc1; color:#ffffff; text-shadow:none;">
 
-                      <div align="center" class="float-left">Coffee/Tea</div>
-                      <div align="center" class="float-left">IN 20 MINUTES</div>
-                      <div align="center" class="float-left"> < 5 MILES </div>
+                            <div align="center" class="float-left">Coffee/Tea</div>
+                            <div align="center" class="float-left">IN 20 MINUTES</div>
+                            <div align="center" class="float-left"> < 5 MILES </div>
 
-                    </div>
+                        </div></div>
                 </div>
 
-                 <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
+                <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
                     <div class="ui-block-a imgblock" style="width:30%; margin:0px; padding:0px" id="pendingimg"><div class="ui-bar ui-bar-a" style="margin:0px; padding:none;"><img src="images/pic2.png" class="pendimg"></div></div>
                     <div class="ui-block-b" style="width:50%;"><div class="ui-bar ui-bar-a text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<a href="#" class"clickmore" style="display: block; color:#cc0000;">Click to read more...</a></p><p>&#8226 Lorem ipsum<br>&#8226 dolor sit<br>&#8226 amet consec</p></div></div>
                     <div class="ui-block-c" style="width:20%;"><div class="ui-bar ui-bar-a addbtn"><img src="images/acceptprofile.svg" class"addimg"></div></div>
@@ -65,14 +65,14 @@
                     <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a namebar" style="background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
                     <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a infobar" style="background-color:#88ccc1; color:#ffffff; text-shadow:none;">
 
-                      <div align="center" class="float-left">Coffee/Tea</div>
-                      <div align="center" class="float-left">IN 20 MINUTES</div>
-                      <div align="center" class="float-left"> < 5 MILES </div>
+                            <div align="center" class="float-left">Coffee/Tea</div>
+                            <div align="center" class="float-left">IN 20 MINUTES</div>
+                            <div align="center" class="float-left"> < 5 MILES </div>
 
-                    </div>
+                        </div></div>
                 </div>
 
-                 <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
+                <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
                     <div class="ui-block-a imgblock" style="width:30%; margin:0px; padding:0px" id="pendingimg"><div class="ui-bar ui-bar-a" style="margin:0px; padding:none;"><img src="images/pic2.png" class="pendimg"></div></div>
                     <div class="ui-block-b" style="width:50%;"><div class="ui-bar ui-bar-a text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<a href="#" class"clickmore" style="display: block; color:#cc0000;">Click to read more...</a></p><p>&#8226 Lorem ipsum<br>&#8226 dolor sit<br>&#8226 amet consec</p></div></div>
                     <div class="ui-block-c" style="width:20%;"><div class="ui-bar ui-bar-a addbtn"><img src="images/acceptprofile.svg" class"addimg"></div></div>
@@ -82,11 +82,11 @@
                     <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a namebar" style="background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
                     <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a infobar" style="background-color:#88ccc1; color:#ffffff; text-shadow:none;">
 
-                      <div align="center" class="float-left">Coffee/Tea</div>
-                      <div align="center" class="float-left">IN 20 MINUTES</div>
-                      <div align="center" class="float-left"> < 5 MILES </div>
+                            <div align="center" class="float-left">Coffee/Tea</div>
+                            <div align="center" class="float-left">IN 20 MINUTES</div>
+                            <div align="center" class="float-left"> < 5 MILES </div>
 
-                    </div>
+                        </div></div>
                 </div>
 
 
@@ -139,7 +139,7 @@
 
                 </ul>
             </div><!--  right panel -->
-        <!--   <div data-role="footer" data-position="fixed" style="height:1px;"></div> <!--Important-->
+            <!--   <div data-role="footer" data-position="fixed" style="height:1px;"></div> <!--Important-->
 
         </div>
     </body>
