--- a/register.html
+++ b/register.html
@@ -17,6 +17,8 @@
         <script src="js/jquery.session.js"></script>
         
 <script src="js/register.js"></script> 
+<link rel="stylesheet" type="text/css" href="css/register.css">
+        <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/registeripad.css">
 
 <script>
   UPLOADCARE_LOCALE = "en";
