--- a/pendingInvitations.html
+++ b/pendingInvitations.html
@@ -37,15 +37,15 @@
 
 
 
-            <div role="main" class="ui-content jqm-content jqm-fullwidth"> <!-- Important-->
+            <div id="main" role="main" class="ui-content jqm-content jqm-fullwidth"> <!-- Important-->
                 <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
                     <div class="ui-block-a imgblock" style="width:30%; margin:0px; padding:0px" id="pendingimg"><div class="ui-bar ui-bar-a" style="margin:0px; padding:none;"><img src="images/pic2.png" class="pendimg"></div></div>
                     <div class="ui-block-b" style="width:50%;"><div class="ui-bar ui-bar-a text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<a href="#" class"clickmore" style="display: block; color:#cc0000;">Click to read more...</a></p><p>&#8226 Lorem ipsum<br>&#8226 dolor sit<br>&#8226 amet consec</p></div></div>
                     <div class="ui-block-c" style="width:20%;"><div class="ui-bar ui-bar-a addbtn"><ul data-role="listview" data-inset="true" style="padding:0px;">
-                  <a href="#"><li><img src="images/acceptprofile.svg" class="addimg"></li></a>
-                    <a href="#"><li><img src="images/rejectprofile.svg" class="rejectimg"></li></a>
-    
-</ul><!-- <img src="images/acceptprofile.svg" class"addimg">--> </div></div>
+                                <a href="#"><li><img src="images/acceptprofile.svg" class="addimg"></li></a>
+                                <a href="#"><li><img src="images/rejectprofile.svg" class="rejectimg"></li></a>
+
+                            </ul><!-- <img src="images/acceptprofile.svg" class"addimg">--> </div></div>
                 </div>
 
                 <div class="ui-grid-a">
