--- a/pendingInvitations.html
+++ b/pendingInvitations.html
@@ -14,7 +14,7 @@
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=true"></script>
         <script src="js/jquery.session.js"></script>
         <script src="js/loggedInOutBehavior.js"></script>
-        <script src="js/mood.js"></script>
+        <script src="js/pendingInvitations.js"></script>
 
         <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
 
@@ -38,60 +38,7 @@
 
 
             <div id="main" role="main" class="ui-content jqm-content jqm-fullwidth"> <!-- Important-->
-                <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
-                    <div class="ui-block-a imgblock" style="width:30%; margin:0px; padding:0px" id="pendingimg"><div class="ui-bar ui-bar-a" style="margin:0px; padding:none;"><img src="images/pic2.png" class="pendimg"></div></div>
-                    <div class="ui-block-b" style="width:50%;"><div class="ui-bar ui-bar-a text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<a href="#" class"clickmore" style="display: block; color:#cc0000;">Click to read more...</a></p><p>&#8226 Lorem ipsum<br>&#8226 dolor sit<br>&#8226 amet consec</p></div></div>
-                    <div class="ui-block-c" style="width:20%;"><div class="ui-bar ui-bar-a addbtn"><ul data-role="listview" data-inset="true" style="padding:0px;">
-                                <a href="#"><li><img src="images/acceptprofile.svg" class="addimg"></li></a>
-                                <a href="#"><li><img src="images/rejectprofile.svg" class="rejectimg"></li></a>
-
-                            </ul><!-- <img src="images/acceptprofile.svg" class"addimg">--> </div></div>
-                </div>
-
-                <div class="ui-grid-a">
-                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a namebar" style="background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
-                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a infobar" style="background-color:#88ccc1; color:#ffffff; text-shadow:none;">
-
-                            <div align="center" class="float-left">Coffee/Tea</div>
-                            <div align="center" class="float-left">IN 20 MINUTES</div>
-                            <div align="center" class="float-left"> < 5 MILES </div>
-
-                        </div></div>
-                </div>
-
-                <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
-                    <div class="ui-block-a imgblock" style="width:30%; margin:0px; padding:0px" id="pendingimg"><div class="ui-bar ui-bar-a" style="margin:0px; padding:none;"><img src="images/pic2.png" class="pendimg"></div></div>
-                    <div class="ui-block-b" style="width:50%;"><div class="ui-bar ui-bar-a text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<a href="#" class"clickmore" style="display: block; color:#cc0000;">Click to read more...</a></p><p>&#8226 Lorem ipsum<br>&#8226 dolor sit<br>&#8226 amet consec</p></div></div>
-                    <div class="ui-block-c" style="width:20%;"><div class="ui-bar ui-bar-a addbtn"><img src="images/acceptprofile.svg" class"addimg"></div></div>
-                </div>
-
-                <div class="ui-grid-a">
-                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a namebar" style="background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
-                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a infobar" style="background-color:#88ccc1; color:#ffffff; text-shadow:none;">
-
-                            <div align="center" class="float-left">Coffee/Tea</div>
-                            <div align="center" class="float-left">IN 20 MINUTES</div>
-                            <div align="center" class="float-left"> < 5 MILES </div>
-
-                        </div></div>
-                </div>
-
-                <div class="ui-grid-b" style="padding:0px; margin:0px; border: solid 1px #cc0000;" >
-                    <div class="ui-block-a imgblock" style="width:30%; margin:0px; padding:0px" id="pendingimg"><div class="ui-bar ui-bar-a" style="margin:0px; padding:none;"><img src="images/pic2.png" class="pendimg"></div></div>
-                    <div class="ui-block-b" style="width:50%;"><div class="ui-bar ui-bar-a text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<a href="#" class"clickmore" style="display: block; color:#cc0000;">Click to read more...</a></p><p>&#8226 Lorem ipsum<br>&#8226 dolor sit<br>&#8226 amet consec</p></div></div>
-                    <div class="ui-block-c" style="width:20%;"><div class="ui-bar ui-bar-a addbtn"><img src="images/acceptprofile.svg" class="addimg"></div></div>
-                </div>
-
-                <div class="ui-grid-a">
-                    <div class="ui-block-a" style="width:30%;"><div class="ui-bar ui-bar-a namebar" style="background-color:#ffbb00; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
-                    <div class="ui-block-b" style="width:70%;"><div class="ui-bar ui-bar-a infobar" style="background-color:#88ccc1; color:#ffffff; text-shadow:none;">
-
-                            <div align="center" class="float-left">Coffee/Tea</div>
-                            <div align="center" class="float-left">IN 20 MINUTES</div>
-                            <div align="center" class="float-left"> < 5 MILES </div>
-
-                        </div></div>
-                </div>
+              
 
 
 
@@ -134,9 +81,8 @@
             <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="a" id="add-form">
                 <ul data-role="listview">
                     <li data-icon="delete"><a href="#" data-rel="close" style="background-color: #fff;"><br></a></li>
-                    <li class="loggedInFields" data-icon="logoicon"><a id="myTable" href="#">My Tables<span id="tableNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
-                    <li class="loggedInFields" data-icon="bell"><a id="invites" href="">Pending Invitations<span id="inviteNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
-                    <li data-icon="logoicon"><a id="myTable" href="#">Terms and Condition</a></li>
+                    <li class="loggedInFields" data-icon="logoicon"><a id="myTable" href="myTables.html">My Tables<span id="tableNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
+                    <li class="loggedInFields" data-icon="bell"><a id="invites" href="pendingInvitations.html">Pending Invitations<span id="inviteNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>                    <li data-icon="logoicon"><a id="myTable" href="#">Terms and Condition</a></li>
                     <li onclick="login()" class="loggedOutFields" data-icon="bell"><a id="login" href="">Login</a></li>
                     <li data-icon="logouticon" onclick="logout()" class="loggedInFields" data-icon="bell"><a id="logout" href="">Logout</a></li>
 
