Mood page COMPLETE UI fix

--- a/mood.html
+++ b/mood.html
@@ -38,18 +38,20 @@
 
 
 
-            <div role="main" class="ui-content jqm-content jqm-fullwidth"> <!-- Important-->
+            <div role="main" class="ui-content jqm-content jqm-fullwidth activitypanel"> <!-- Important-->
 
                 <!-- This is the preference panel div-->
                 <div data-role="controlgroup" data-type="horizontal" style="text-align:center; padding: 0px; margin: 0px; width:100%">
 
-                    <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="0" activity="coffee" style="background:#ffffff; padding: 22px;"><img src="images/coffeeinvert.svg" class="coffee"></a>
-                    <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="0" activity="drinks" style="background:#ffffff;padding: 22px;"><img src="images/drinksinvert.svg" class="drinks"></a>
-                    <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="0" activity="dine" style="background:#ffffff;padding: 22px;"><img src="images/dineinvert.svg" class="dine"></a>
+                    <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="0" activity="coffee" style="background:#ffffff;"><img src="images/coffee.svg" class="coffee"></a>
+                    <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="0" activity="drinks" style="background:#ffffff;"><img src="images/drinks.svg" class="drinks"></a>
+                    <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="0" activity="dine" style="background:#ffffff;"><img src="images/dine.svg" class="dine"></a>
                   
                 </div>
-
-  <br>
+            </div>
+            
+             <div role="main" class="ui-content jqm-content jqm-fullwidth" style="padding-top:0px">
+  
 
                 <!-- This is the the preference form div-->
                 <ul data-role="listview" style="margin-bottom:10px; padding-top: 10px;" data-mini="true">
