login page UI complete fix

--- a/login.html
+++ b/login.html
@@ -88,7 +88,7 @@
                 </ul>
             </div><!--  right panel -->
 
-            <div data-role="footer" data-position="fixed"></div> <!-- Important-->
+           <!-- <div data-role="footer" data-position="fixed"></div> <!-- Important-->
 
         </div>
     </body>
