--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" type="text/css" href="css/login.css">
         <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/loginipad.css">
         <link href="//fonts.googleapis.com/css?family=PT+Sans Narrow:400,700" rel="stylesheet" type="text/css">
-
+        <link href='http://fonts.googleapis.com/css?family=PT+Sans:700,400' rel='stylesheet' type='text/css'>
     </head>
 
     <body>
