confirmInvitations page UI cleanup

--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -32,7 +32,8 @@
                     $('#dateString').text(dateString)
                 });
         </script>    
-
+        
+        <link href='http://fonts.googleapis.com/css?family=PT+Sans:700,400' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/confirmInvitations.css">
         <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/confirmInvitationsipad.css">
     </head>
@@ -73,7 +74,7 @@
 
 
                 <div class="ui-grid-b" style=" padding:0px; background-color: #88ccc1;">
-                    <div class="ui-block-a timedate"><br><div class="ui-bar ui-bar-a" style="height:60px; color:#cc0000; font-family: PT Sans Narrow; background-color:#88ccc1; border: none; text-shadow: none;">TIME/DATE</div></div>
+                    <div class="ui-block-a timedate"><br><div class="ui-bar ui-bar-a" style="height:60px; color:#cc0000; font-family: PT Sans; background-color:#88ccc1; border: none; text-shadow: none;">TIME/DATE</div></div>
                     <div class="ui-block-b confirmdate"><div class="ui-bar ui-bar-a" style="height:60px; margin:0px; padding:0px; background-color:#ffbb00; border: none; text-shadow: none;">
                                                  <form>
                                 <fieldset data-role="controlgroup" data-type="horizontal" data-mini="true" style="padding-top:7px;">
